--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,15 +1,14 @@
-
 /*** Spinner Start ***/
 /*** Spinner ***/
 #spinner {
     opacity: 0;
     visibility: hidden;
-    transition: opacity .5s ease-out, visibility 0s linear .5s;
+    transition: opacity 0.5s ease-out, visibility 0s linear 0.5s;
     z-index: 99999;
 }
 
 #spinner.show {
-    transition: opacity .5s ease-out, visibility 0s linear 0s;
+    transition: opacity 0.5s ease-out, visibility 0s linear 0s;
     visibility: visible;
     opacity: 1;
 }
@@ -17,7 +16,7 @@
 
 .back-to-top {
     position: fixed;
-    right: 30px;
+    right: 40px;
     bottom: 30px;
     transition: 0.5s;
     z-index: 99;
@@ -26,7 +25,7 @@
 /*** Button Start ***/
 .btn {
     font-weight: 600;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .btn-square {
@@ -96,18 +95,27 @@
 
 /*** Icon Animation Start ***/
 @keyframes icon-animat {
-    0%  {border-radius: 67% 33% 29% 71% / 39% 46% 54% 61%;}
+    0% {
+        border-radius: 67% 33% 29% 71% / 39% 46% 54% 61%;
+    }
 
-    25% {border-radius: 69% 31% 19% 81% / 43% 37% 63% 57%;}
+    25% {
+        border-radius: 69% 31% 19% 81% / 43% 37% 63% 57%;
+    }
 
-    50% {border-radius: 67% 33% 16% 84% / 57% 37% 63% 43%;}
+    50% {
+        border-radius: 67% 33% 16% 84% / 57% 37% 63% 43%;
+    }
 
-    75% {border-radius: 77% 23% 61% 39% / 36% 61% 39% 64%;}
+    75% {
+        border-radius: 77% 23% 61% 39% / 36% 61% 39% 64%;
+    }
 
-    100% {border-radius: 67% 33% 29% 71% / 39% 46% 54% 61%;}
+    100% {
+        border-radius: 67% 33% 29% 71% / 39% 46% 54% 61%;
+    }
 }
 /*** Icon Animation End ***/
-
 
 /*** Navbar Start ***/
 .nav-bar {
@@ -127,7 +135,7 @@
     font-size: 17px;
     font-weight: 500;
     outline: none;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .sticky-top .navbar-light .navbar-nav .nav-link {
@@ -142,7 +150,7 @@
 
 .navbar-light .navbar-brand img {
     max-height: 60px;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .sticky-top .navbar-light .navbar-brand img {
@@ -168,24 +176,22 @@
     visibility: visible;
     margin-top: 8px !important;
     background: var(--bs-light);
-    transition: .5s;
+    transition: 0.5s;
     opacity: 1;
 }
 
-
-
 @media (min-width: 992px) {
     .navbar .nav-item .dropdown-menu {
-    display: block;
-    visibility: hidden;
-    top: 100%;
-    transform: rotateX(-75deg);
-    transform-origin: 0% 0%;
-    border: 0;
-    border-radius: 10px;
-    margin-top: 8px !important;
-    transition: .5s;
-    opacity: 0;
+        display: block;
+        visibility: hidden;
+        top: 100%;
+        transform: rotateX(-75deg);
+        transform-origin: 0% 0%;
+        border: 0;
+        border-radius: 10px;
+        margin-top: 8px !important;
+        transition: 0.5s;
+        opacity: 0;
     }
 }
 
@@ -218,7 +224,7 @@
     height: 100%;
     left: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, .6);
+    background: rgba(0, 0, 0, 0.6);
     display: flex;
     align-items: center;
 }
@@ -238,8 +244,8 @@
     border: 6px solid var(--bs-white);
     border-radius: 15px;
     padding: 0;
-    margin-top:10px;
-    margin-bottom:10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     background-color: var(--bs-secondary);
     opacity: 1;
     transition: 0.5s;
@@ -260,7 +266,8 @@
 .bg-breadcrumb {
     position: relative;
     overflow: hidden;
-    background: linear-gradient(rgba(31, 46, 78, 1), rgba(0, 12, 33, 0.8)), url(../img/fact-bg.jpg);
+    background: linear-gradient(rgba(31, 46, 78, 1), rgba(0, 12, 33, 0.8)),
+        url(../img/fact-bg.jpg);
     background-position: center top;
     background-repeat: no-repeat;
     background-size: cover;
@@ -288,14 +295,14 @@
 }
 
 .feature .feature-item .feature-icon span {
-    width: 90px; 
+    width: 90px;
     height: 90px;
     display: flex;
     align-items: center;
     justify-content: center;
     color: var(--bs-secondary);
     background: var(--bs-primary);
-    border-radius: 67% 33% 29% 71% / 39% 46% 54% 61%;;
+    border-radius: 67% 33% 29% 71% / 39% 46% 54% 61%;
     animation-name: icon-animat;
     animation-duration: 5s;
     animation-delay: 1s;
@@ -319,8 +326,8 @@
 }
 
 .about .about-item .about-item-inner .about-icon {
-    width: 90px; 
-    height: 90px; 
+    width: 90px;
+    height: 90px;
     border-radius: 67% 33% 29% 71% / 39% 46% 54% 61%;
     display: flex;
     align-items: center;
@@ -340,7 +347,6 @@
     overflow: hidden;
     width: 100%;
     height: 100%;
-    
 }
 
 .about .about-img .img-1 {
@@ -350,8 +356,8 @@
 
 .about .about-img .img-2 {
     position: absolute;
-    width: 100%; 
-    bottom: 0; 
+    width: 100%;
+    bottom: 0;
     right: 0;
     padding-left: 50px;
     border-radius: 10px;
@@ -386,18 +392,18 @@
 }
 /*** About End ***/
 
-
 /*** Fact Counter Start ***/
 .counter {
-    background: linear-gradient(rgba(0, 12, 33, 0.9), rgba(31, 46, 78, 0.9)), url(../img/fact-bg.jpg);
+    background: linear-gradient(rgba(0, 12, 33, 0.9), rgba(31, 46, 78, 0.9)),
+        url(../img/fact-bg.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .counter .counter-item .counter-item-icon {
-    width: 90px; 
-    height: 90px; 
+    width: 90px;
+    height: 90px;
     border-radius: 67% 33% 29% 71% / 39% 46% 54% 61%;
     display: flex;
     align-items: center;
@@ -422,7 +428,7 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .1);
+    box-shadow: 0 0 45px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     background: var(--bs-white);
     transition: 0.5s;
@@ -457,8 +463,8 @@
 }
 
 .service .service-item .service-icon {
-    width: 90px; 
-    height: 90px; 
+    width: 90px;
+    height: 90px;
     border-radius: 67% 33% 29% 71% / 39% 46% 54% 61%;
     display: flex;
     align-items: center;
@@ -494,7 +500,7 @@
 }
 
 .categories .categories-item .categories-item-inner:hover {
-    box-shadow: 0 0 50px rgba(234, 0, 30, .3);
+    box-shadow: 0 0 50px rgba(234, 0, 30, 0.3);
 }
 
 .categories .categories-item-inner .categories-img {
@@ -544,15 +550,14 @@
 }
 /*** Cars Categories End ***/
 
-
 /*** Process Start ***/
 .steps {
-    background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url(../img/bg-1.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),
+        url(../img/bg-1.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
 }
-
 
 .steps .steps-item {
     position: relative;
@@ -569,10 +574,10 @@
     position: absolute;
     width: 64px;
     height: 64px;
-    bottom: 0; 
+    bottom: 0;
     right: 40px;
     font-weight: 900;
-    border: 1px solid var(--bs-white); 
+    border: 1px solid var(--bs-white);
     border-radius: 64px;
     transform: translateY(50%);
     color: var(--bs-white);
@@ -583,7 +588,6 @@
 }
 /*** Process End ***/
 
-
 /*** Blog Start ***/
 .blog .blog-item {
     border-radius: 10px;
@@ -591,7 +595,7 @@
 }
 
 .blog .blog-item:hover {
-    box-shadow: 0 0 45px rgba(0, 0, 0, .2);
+    box-shadow: 0 0 45px rgba(0, 0, 0, 0.2);
 }
 
 .blog .blog-item .blog-img {
@@ -622,7 +626,7 @@
 
 .blog .blog-item:hover .blog-img img {
     transform: scale(1.2);
-}  
+}
 
 .blog .blog-item .blog-content {
     position: relative;
@@ -631,8 +635,8 @@
 
 .blog .blog-item .blog-content .blog-date {
     position: absolute;
-    top: 0; 
-    left: 25px; 
+    top: 0;
+    left: 25px;
     transform: translateY(-50%);
     padding: 12px 25px;
     border-radius: 10px;
@@ -645,7 +649,6 @@
     justify-content: space-between;
 }
 /*** Blog End ***/
-
 
 /*** Banner Start ***/
 .banner .banner-item {
@@ -665,7 +668,7 @@
     top: 0;
     left: 0;
     border-radius: 10px;
-    background: rgba(0, 0, 0, .6);
+    background: rgba(0, 0, 0, 0.6);
     z-index: 2;
 }
 
@@ -774,7 +777,7 @@
     top: 0;
     left: 0;
     border-radius: 10px;
-    background: rgba(255, 255, 255, .3);
+    background: rgba(255, 255, 255, 0.3);
     z-index: 4;
     transition: 0.5s;
 }
@@ -820,8 +823,8 @@
 }
 
 .testimonial .testimonial-item .testimonial-inner img {
-    width: 100px; 
-    height: 100px; 
+    width: 100px;
+    height: 100px;
     border-radius: 100px;
     border: 4px solid var(--bs-white);
 }
@@ -893,8 +896,8 @@
 }
 
 .contact .contact-add-item .contact-icon {
-    width: 90px; 
-    height: 90px; 
+    width: 90px;
+    height: 90px;
     border-radius: 67% 33% 29% 71% / 39% 46% 54% 61%;
     display: flex;
     align-items: center;
@@ -910,7 +913,6 @@
 }
 
 /*** Contact End ***/
-
 
 /*** Footer Start ***/
 .footer {
@@ -952,5 +954,3 @@
     background: var(--bs-dark);
 }
 /*** copyright end ***/
-
-
